force-app/main/default/objects/Airlines__c/Airlines__c.object-meta.xml
<CustomObject>
    <label>Airlines</label>
    <nameField>
        <label>Airlines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>