force-app/main/default/objects/Airlines__c/fields/Head_Quaters__c.field-meta.xml
<CustomField>
    <fullName>Head_Quaters__c</fullName>
    <label>Head Quaters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>